--- a/style/mobile.css
+++ b/style/mobile.css
@@ -7,86 +7,114 @@
   justify-content: space-between;
 }
 .container {
-  padding: 0 1rem;
+  padding: 0 1.5rem;
 }
 .header__nav {
   display: none;
 }
 .header__logo {
-    font-size: 2rem;
-    font-weight: 600;
+  font-size: 2rem;
+  font-weight: 600;
 }
 .header__burger {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 .main {
-    background-image: url(../images/banner/banner.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+  background-image: url(../images/banner/banner.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 .main__article {
-    padding-top: 3rem;
-    color: #fff;
+  padding-top: 3rem;
+  color: #fff;
 }
 .main__heading {
-    text-transform: capitalize;
-    font-size: 2.5rem;
-    font-weight: 300;
+  text-transform: capitalize;
+  font-size: 2.5rem;
+  font-weight: 300;
 }
 .main__text {
-    margin-top: 1.5rem;
-    font-size: 1.2rem;
+  margin-top: 1.5rem;
+  font-size: 1.2rem;
 }
 .main__button {
-    padding: 10px 30px;
-    background-color: var(--main-btn);
-    border: none;
-    border-radius: 5px;
-    color: white;
-    text-transform: capitalize;
-    font-size: 1.4rem;
-    font-weight: 600;
-    margin-top: 4rem;
+  padding: 10px 30px;
+  background-color: var(--main-btn);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  text-transform: capitalize;
+  font-size: 1.4rem;
+  font-weight: 400;
+  margin-top: 4rem;
 }
 .main__image {
-    max-width: 400px;
+  max-width: 400px;
 }
 .main__image > .main__image-phone {
-    width: 100%;
-    object-fit: cover;
-    position: relative;
-    top: 5rem;
+  width: 100%;
+  object-fit: cover;
+  position: relative;
+  top: 5rem;
 }
 .option {
-    margin-top: 8rem;
-    text-align: center;
+  margin-top: 8rem;
+  text-align: center;
 }
 .option__content {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
 .option__text {
-    margin-top: 2rem;
-    font-size: 1.8rem;
-    font-weight: 400;
-    padding: 0 6rem;
+  margin-top: 2rem;
+  font-size: 1.8rem;
+  font-weight: 300;
+  padding: 0 6rem;
 }
 .option__icon {
-    width: 80px;
-    height: 80px;
-    margin: 0 auto;
-    line-height: 80px;
-    border-radius: 20px;
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
+  line-height: 80px;
+  border-radius: 20px;
 }
 .option__image {
-    width: 40px;
+  width: 40px;
 }
 .option__icons-circle {
-    background-color: var(--icon-blue);
+  background-color: var(--icon-blue);
 }
 .option__icons-leaf {
-    background-color: var(--icon-orange);
-} 
+  background-color: var(--icon-orange);
+}
 .option__icons-cloud {
-    background-color: var(--icon-green);
-} 
+  background-color: var(--icon-green);
+}
+.features {
+  margin-top: 10rem;
+}
+.features__text {
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 2;
+}
+.features__button {
+  padding: 10px 30px;
+  background-color: var(--secondary-btn);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  text-transform: capitalize;
+  font-size: 1.4rem;
+  font-weight: 400;
+  margin-top: 2rem;
+}
+.features__image-container {
+    max-width: 400px;
+    height: auto;
+    margin: 3rem auto;
+}
+.features__image {
+    width: 100%;
+}
