pricing section on mobile finished

--- a/style/global.css
+++ b/style/global.css
@@ -7,7 +7,7 @@
    --secondary-btn: #0181F5;
    --pricing-basic: #E9F4FE;
    --pricing-team: #FEF4EE;
-   --pricing-bus: #E8FCF1;
+   --pricing-bus: #ecfce8;
    --footer-bck: #1F1F1F;
 }
 
