--- a/style/mobile.css
+++ b/style/mobile.css
@@ -120,7 +120,7 @@
   width: 100%;
 }
 .background-review {
-  margin-top: 4rem;
+  margin-top: 6rem;
   background: url(/images/banner/testmonial.png);
   background-size: cover;
   background-position: center;
@@ -161,4 +161,58 @@
 }
 .background-review__stars {
   color: gold;
+}
+.pricing {
+  margin-top: 4rem;
+  text-align: center;
+}
+.pricing__text {
+  margin-top: 2rem;
+  font-size: 1.3rem;
+}
+.card {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  margin-top: 2rem;
+}
+.pricing__header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2rem;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+.pricing__basic > .pricing__header {
+  background-color: var(--pricing-basic);
+}
+.pricing__team > .pricing__header {
+  background-color: var(--pricing-team);
+}
+.pricing__business > .pricing__header {
+  background-color: var(--pricing-bus);
+}
+.pricing__basic  .pricing__price {
+  color: var(--icon-blue);
+}
+.pricing__team  .pricing__price {
+  color: var(--icon-orange);
+}
+.pricing__business  .pricing__price {
+  color: var(--icon-green);
+}
+.pricing__list-item  {
+  margin: 4rem 0;
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 1.3rem;
+}
+.pricing__button {
+  margin-bottom: 4rem;
+  padding: 10px 35px;
+  text-transform: capitalize;
+  border: 1px solid var(--icon-blue);
+  background-color: transparent;
+  color: var(--icon-blue);
+  border-radius: 10px;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
