--- a/style/tablet.css
+++ b/style/tablet.css
@@ -1,5 +1,8 @@
 .heading {
-    font-size: 2.4rem;
+    font-size: 3rem;
+}
+.container {
+    padding: 0 3rem;
 }
 .main__content {
     display: flex;
@@ -18,13 +21,17 @@
     width: 30%;
     margin-top: 4rem;
 }
+.main__heading {
+    font-size: 2.8rem;
+}
 .main__text {
     font-size: 1.6rem;
 }
 .option__wrapper {
     display: flex;
+    justify-content: center;
     margin-top: 4rem;
-    width: 80%;
+    width: 90%;
     margin: 4rem auto 0;
 }
 .option__heading {
@@ -40,4 +47,20 @@
 }
 .option__text {
     padding: 0 4rem;
+}
+.features {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.features__content {
+    width: 40%
+}
+.features__image-container {
+    width: 40%;
+    max-width: 350px;
+    margin: 0;
+}
+.features__button {
+    margin-top: 3rem;
 }
