--- a/style/tablet.css
+++ b/style/tablet.css
@@ -87,7 +87,7 @@
     justify-content: center;
     align-items: center;
     width: 90%;
-    margin: 4rem auto;
+    margin: 4rem auto 0;
 }
 .pricing__basic {
     flex: 1;
@@ -100,4 +100,17 @@
 }
 .pricing__list-item {
     font-size: 1.4rem;
+}
+.product {
+    margin-top: 20rem;
+    padding: 15rem 4rem;
+}
+.product__heading {
+    font-size: 3.5rem;
+    margin: 0 auto;
+    text-align: left;
+    width: 55%;
+}
+.product__icons {
+    margin-top: 2rem;
 }
